# calamity

./: .gitignore  README.md  calamity_runner.py  envs.toml  pyproject.toml
.github/workflows/: python-publish.yml
calamity/: __main__.py  colors.py  database.py  display.py  getch.py  modify.py  validators.py
calamity_calendar/: __init__.py  __main__.py  calamity_runner.py  colors.py  command_tree.py  database.py  dateutils.py  display.py  getch.py  help.py  modify.py  pager.py
web/: package-lock.json  package.json
web/src/routes/: +page.svelte
