[tool.poetry]
name = "calamity_calendar"
version = "0.1.8"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"
packages = [
  { include = "calamity_calendar" }
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.20"
questionary = "^2.0.0"
fire = "^0.5.0"
getch = "^1.0"
wcwidth = "^0.2.6"
pydevd = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calamity = "calamity_calendar.calamity_runner:main"
