[tool.poetry]
name = "calamity_calendar"
version = "0.1.9"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"
packages = [
  { include = "calamity_calendar" }
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# calamity = "calamity_calendar.calamity_runner:main"
calamity = "calamity_calendar:run"
